style.css
:root {
  --main-bg-color: #FFB74D;
  --main-text-color: #E65100;
}

body {
  background-color: var(--main-bg-color);
}

@keyframes fadeout {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}


@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.question-text-container {
  text-align: center;
  color: var(--main-text-color);
  font-family: 'Playfair Display', serif;
  font-size: 41px;
  line-height: 75px;
  z-index: 5;
  max-width: 28em;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
}

.question-text {
  padding: 0 120px;
}

.question-number {
  position: fixed;
  left: 50%;
  top: 50%;
  width: 4em;
  text-align: center;
  line-height: 1;
  margin-left: -2em;
  margin-top: -0.415em;

  font-family: 'Josefin Sans', sans-serif;
  font-size: 2000%;
  color: white;
  font-weight: 900;
  opacity: 0.15;
  user-select: none;
  z-index: 1;
}

.arrow {
  position: fixed;
  top: 50%;
  transform: translate(0, -50%);
  border-radius: 100% / 50%;
  height: 83px;
  width: 41.5px;

  background-color: rgba(255, 255, 255, 0.2);
  color: white;
  font-family: 'Josefin Sans', sans-serif;
  font-size: 20.8px;
  z-index: 10;
  text-decoration: none;
  border: none;
  transition-duration: .15s;
  outline: none;
  cursor: pointer;
}

.arrow:hover {
  background-color: white;
  color: var(--main-bg-color);
}

.arrow:active {
  color: var(--main-text-color);
}

.left-arrow {
  left: 0%;
  text-align: left;
  padding-left: 8.5px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.right-arrow {
  right: 0%;
  text-align: right;
  padding-right: 8.5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

@media (min-width: 700px) {
  .left-arrow {
    padding-left: 11px;
    font-size: 27px;
    height: 108px;
    width: 54px;
  }

  .right-arrow {
    text-align: right;
    padding-right: 21px;
    font-size: 52px;
    height: 208px;
    width: 104px;
  }
}

